--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 100%
 }
 
-.formulario{
+.formulario, .venta{
     flex: 1;
     padding-right: 2rem;
 }
@@ -39,6 +39,16 @@ body {
     display: block;
     margin-bottom: 0.4rem;
     font-weight: bold;
+}
+
+.campoVenta input, .campoVenta select{
+    width: 100%;
+    height: 15px;
+    padding: 0.8rem;
+    font-size: 1rem;
+    border: 0px;
+    border-radius: 8px;
+    outline: none;
 }
 
 .campo input, .campo select{
