--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,20 @@ body {
     font-weight: bold;
 }
 
-.campoVenta input, .campoVenta select{
+.campoVenta input{
     width: 100%;
     height: 15px;
     padding: 0.8rem;
     font-size: 1rem;
     border: 0px;
     border-radius: 8px;
+    outline: none;
+}
+
+.campoVenta select{
+    width: 100%;
+    height: 20px;
+    font-size: 0.85rem;
     outline: none;
 }
 
